tests/language_modules/05_records/invalid_semantics/keyword_record_field.vf
module KeywordRecordField

type Account is record
    module: Integer
end record

end KeywordRecordField